--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </section>
 
         <section>
-            <h2>What We do</h2>
+            <h2>What We do.</h2>
         </section>
 
         <section>
