--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach out</h2>
             <div class="contact-info">
+                <div class="contact-form">
+                    <h3>Contact Us</h3>
+                    <form>
+                       <label for="contact-name">Your Name</label>
+                       <input type="text" id="contact-name" placeholder="Your Name" />
+                  
+                       <label for="contact-message">Message</label>
+                       <textarea id="contact-message" placeholder="Message"></textarea>
+                  
+                       <button type="submit">Submit</button>
+                      </form>
+                  </div>
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3057.478021751639!2d-74.79516308437952!3d39.97542159028369!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c1486de2d781f5%3A0x5f1bbb3c1954f6e0!2s32%20Estate%20Rd%2C%20Lumberton%2C%20NJ%2008048!5e0!3m2!1sen!2sus!4v1629571258708!5m2!1sen!2sus" 
                     width="400" 
